[package]
name = "crawler_dev"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
blake3 = "1.8.2"
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive"] }
fantoccini = "0.22.0"
hex = "0.4.3"
http = "1.3.1"
http-body-util = "0.1.3"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.7"
